<resources>
    <string name="app_name">Laundry</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>

    <string name="DESC_STATUS_NETWORK">Connection Error</string>
    <string name="DESC_STATUS_EMPTY">Data Empty</string>
    <string name="SIGN_LOADING">Loading</string>
    <string name="DESC_STATUS_DATA_COMPLETE">Data Complete</string>
    <string name="SIGN_ERROR_NETWORK">Failed to get data</string>
    <string name="SIGN_ERROR_NO_DATA">Data is empty</string>
    <string name="SIGN_DATA_COMPLETE">All Data have been displayed</string>
    <string name="SIGN_SAVED_CONTENT">Success put favourite</string>
    <string name="SIGN_UNSAVED_CONTENT">Item removed from favourite</string>
    <string name="favourite">Favourite</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="production">Production</string>
    <string name="ratingage">Rating Age</string>
    <string name="rating">Rating</string>
    <string name="budget">Budget</string>
    <string name="releasedate">Release Date</string>
    <string name="openurl">Open URL</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="daftaruser">Daftar Pengguna</string>
    <string name="nama">Nama</string>
    <string name="tanggallahir">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="radioMale">Laki laki</string>
    <string name="radioFemale">Perempuan</string>
    <string name="alamat">Alamat</string>
    <string name="nohandphone">No Handphone</string>
    <string name="daftarjasa">Daftar Penyedia Jasa</string>
    <string name="alamatlaundry">Alamat Laundry</string>
    <string name="kurir">Kurir</string>
    <string name="radioTersedia">Tersedia</string>
    <string name="radioTakTersedia">Tidak tersedia</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="pesan">Pesan</string>
    <string name="panduan">Panduan</string>
    <string name="lihatpesanan">Lihat Pesanan</string>
    <string name="gantipassword">Ganti Password</string>
    <string name="simpan">Simpan</string>
    <string name="editharga">Edit Harga</string>
    <string name="tambahharga">Tambah Harga</string>
    <string name="reguler">Reguler</string>
    <string name="harga">Harga</string>
    <string name="express">Express</string>
    <string name="tipe">Tipe</string>
    <string name="radioKg">Kg</string>
    <string name="radioPc">Pc</string>
    <string name="detaillaundry">Detail Laundry</string>
    <string name="status_laundry">Status Laundry</string>
    <string name="pilih_jenis_paket">Pililh Jenis Paket</string>
    <string name="beratorpc">Berat(kg) atau Pc</string>
    <string name="masukkanjumlah">Masukkan jumlah</string>
    <string name="pakaijasakurir">Pakai Jasa Kurir</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="namalaundry">Nama Laundry</string>
    <string name="jenis_paket">Jenis Paket</string>
    <string name="logout">Log Out</string>
    <string name="berat">Berat</string>
    <string name="totalharga">Total Harga</string>
    <string name="tolak">Tolak</string>
    <string name="terima">Terima</string>
    <string name="transaksi">Transaksi</string>
    <string name="status">Status</string>
    <string name="bank">Bank</string>
    <string name="rekening">No Rekening</string>
    <string name="ganti_foto">Ubah Gambar Profil</string>
    <string name="pending">Pending</string>
    <string name="selesai">Selesai</string>
    <string name="proses">Proses</string>
    <string name="lihatbukti">Lihat Bukti Pembayaran</string>
    <string name="uploadbukti">Upload Bukti Pembayaran</string>
    <string name="silahkantransfer">Silahkan transfer ke rekening berikut</string>
    <string name="abaikan">Abaikan apabila sudah transfer</string>
    <string name="tekanuntukproses">Tekan untuk proses</string>
    <string name="listuser">List User</string>
    <string name="listlaundry">List Laundry</string>
    <string name="updateuser">Update User</string>
    <string name="deleteuser">Delete User</string>
    <string name="ubahprofil">Ubah Profil</string>
    <string name="edituser">Edit User</string>
    <string name="editpaket">Edit Paket</string>
    <string name="jasakurir">Jasa Kurir</string>
    <string name="harga_paket">Harga Paket</string>
    <string name="jumlah_paket">Jumlah Paket</string>
    <string name="harga_total">Harga Total</string>
    <string name="konfirmasipesanan">Konfirmasi Pesanan</string>
    <string name="tidakadadata">Tidak ada data</string>
    <string name="user">User</string>
    <string name="laundry">Laundry</string>

</resources>
