<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_collection_parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/view_content_detail_appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/view_content_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="snap"
            app:titleTextColor="@color/color_text"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/padding_margin_normal"
        android:paddingTop="@dimen/padding_margin_normal">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEditHarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_margin_normal"
            android:background="@color/colorWhite"
            android:fontFamily="@font/gotham_book"
            android:hint="@string/tambahharga"
            android:inputType="text"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text"
            android:textSize="@dimen/normal_smaller_font_size" />


        <EditText
            android:id="@+id/etEditHargaName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/gotham_book"
            android:hint="@string/nama"
            android:inputType="text"
            android:textSize="@dimen/normal_smaller_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:fontFamily="@font/gotham_book"
                android:gravity="center"
                android:hint="@string/reguler"
                android:inputType="text"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text"
                android:textSize="@dimen/normal_smaller_font_size" />

            <EditText
                android:id="@+id/etEditHargaReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_book"
                android:hint="@string/harga"
                android:inputType="number"
                android:textSize="@dimen/normal_smaller_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                android:fontFamily="@font/gotham_book"
                android:gravity="center"
                android:hint="@string/express"
                android:inputType="text"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text"
                android:textSize="@dimen/normal_smaller_font_size" />

            <EditText
                android:id="@+id/etEditHargaExpres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_book"
                android:hint="@string/harga"
                android:inputType="number"
                android:textSize="@dimen/normal_smaller_font_size" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="11dp"
            android:background="@color/colorWhite"
            android:fontFamily="@font/gotham_book"
            android:gravity="center"
            android:hint="@string/tipe"
            android:inputType="text"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text"
            android:textSize="@dimen/normal_smaller_font_size" />

        <RadioGroup
            android:id="@+id/radioHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioKg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radioKg"
                android:textColor="@color/color_text" />

            <RadioButton
                android:id="@+id/radioPc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioPc"
                android:textColor="@color/color_text" />

        </RadioGroup>


        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_weight="0.5"
                android:id="@+id/btnTambahHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/padding_margin_normal_thin"
                android:background="@drawable/background_rounded_green">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="@dimen/padding_margin_normal"
                    android:text="@string/tambahharga"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/normal_font_size"

                    app:fontFamily="@font/gotham_bold" />


            </LinearLayout>
            <LinearLayout
                android:alpha="0.6"
                android:layout_weight="0.5"
                android:id="@+id/btnSaveHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/padding_margin_normal_thin"
                android:background="@drawable/background_rounded_green">


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="@dimen/padding_margin_normal"
                    android:text="@string/simpan"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/normal_font_size"

                    app:fontFamily="@font/gotham_bold" />


            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
